# approximate-Inference

./: .gitignore  README.md  main.py  pyproject.toml  submission.tex
demo_code/: MStep.py  genimages.py  m_step.py
src/: automatic_relevance_determination.py  constants.py  expectation_maximisation.py  generate_images.py
src/models/: bayesian_linear_regression.py  binary_latent_factor_model.py  binary_latent_factor_model_approximation.py  boltzmann_machine.py  gaussian_process_regression.py  kernels.py  mean_field_approximation.py  mean_field_learning.py  message_passing.py  variational_bayes.py
src/models/binary_latent_factor_approximations/: abstract_binary_latent_factor_approximation.py  mean_field_approximation.py  message_passing_approximation.py
src/models/binary_latent_factor_models/: abstract_binary_latent_factor_model.py  binary_latent_factor_model.py  boltzmann_machine.py  variational_bayes.py
src/solutions/: q2.py  q3.py  q4.py  q5.py  q6.py
