[tool.poetry]
name = "approximate-inference-and-learning-in-probabilistic-models"
version = "0.0.0"
description = "Assignment for Approximate Inference and Learning in Probabilistic Models (COMP0085) at UCL 2022"
authors = ["James Wu <jian.wu.22@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# Core dependencies
numpy="^1.21.5"
scipy="~1.9.1"
matplotlib="^3.5.2"
pandas = "^1.5.2"
dataframe-image = "^0.1.3"
jax = "^0.4.1"
optax = "^0.1.4"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.6"
isort = "^5.10"
pytest = "~7.2"

[tool.isort]
skip = [".venv", "demo_code"]

[tool.black]
exclude = '''
(
  /(
    | \.venv
    | demo_code
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true